--- a/OneDrive/Desktop/Code ai checker/package.json
+++ b/OneDrive/Desktop/Code ai checker/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "jspdf": "^2.5.1"
+    "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -22,4 +22,3 @@
     "vite": "^5.0.8"
   }
 }
-
